--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "startWatch" : "tsc --watch",
     "startDevServer": "http-server --port 3000 docs",
-    "start": "concurrently --kill-others \"npm run startWatch\" \"npm run startDevServer\""
-
+    "start": "concurrently --kill-others \"npm run startWatch\" \"npm run startDevServer\"",
+    "clean": "rm -rf docs/**/*.js"
   }
 }
